[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/painter/painter.gd" type="Script" id=1]
[ext_resource path="res://addons/painter/seams/seams_texture_generator.tscn" type="PackedScene" id=2]

[node name="Painter" type="Node"]
script = ExtResource( 1 )

[node name="ChannelPainters" type="Node" parent="."]

[node name="SeamsTextureGenerator" parent="." instance=ExtResource( 2 )]

[node name="ClickViewport" type="Viewport" parent="."]
own_world = true
physics_object_picking = true

[node name="StaticBody" type="StaticBody" parent="ClickViewport"]

[node name="CollisionShape" type="CollisionShape" parent="ClickViewport/StaticBody"]
